# Slenk-BLE

./: .coverage  .gitignore  README.md  build.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-30-ble-upper-monitor-implementation.md
docs/superpowers/specs/: 2026-06-30-ble-upper-monitor-design.md
src/: app.py  main.py
src/app_layer/: connection_manager.py  data_cache.py  export_service.py  ota_service.py  protocol_engine.py
src/app_layer/protocols/: base.py  json_proto.py  modbus.py  raw.py
src/ble/: connector.py  gatt_service.py  manager.py  scanner.py  signals.py
src/ui/: device_panel.py  main_window.py  styles.py
src/ui/tabs/: chart_tab.py  data_tab.py  log_tab.py  ota_tab.py  protocol_tab.py
src/ui/widgets/: realtime_chart.py
src/utils/: logger.py
tests/: conftest.py  test_connector.py  test_gatt_service.py  test_manager.py  test_scanner.py
tests/app_layer/: test_connection_manager.py  test_data_cache.py  test_export_service.py  test_ota_service.py  test_protocol_engine.py  test_protocols.py
