[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ble-upper-monitor"
version = "0.1.0"
description = "BLE 上位机软件"
requires-python = ">=3.10"
dependencies = [
    "qasync>=0.27",
    "PySide6>=6.6",
    "bleak>=0.21",
    "pyqtgraph>=0.13",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
]